1.增加管理员界面WM_SHOWWINDOW消息处理 2.增加用户界面定时读取卡号 3.用户界面读到卡号后，停止定时器，并检查授权，然后打开定时器 4.主窗口类增加授权、取消授权操作 5.设置kay的两个函数release模式不会下发命令

--- a/RFIDCard/RFIDCard.vcxproj
+++ b/RFIDCard/RFIDCard.vcxproj
@@ -218,6 +218,8 @@
     <None Include="res\RFIDCard.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\GreenLight.bmp" />
+    <Image Include="res\RedLight.bmp" />
     <Image Include="res\RFIDCard.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
