--- a/RFIDCard/RFIDCard.vcxproj.filters
+++ b/RFIDCard/RFIDCard.vcxproj.filters
@@ -77,5 +77,11 @@
     <Image Include="res\RFIDCard.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\GreenLight.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="res\RedLight.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
